# octetos-biblion

./: .gitignore  configure.ac
ing/: rqs.ods
src/: Makefile.am  biblion.cc  biblion.hh  cita-lexer.cc  cita-lexer.h  cita.c  cita.y  main.cc  octetos-biblion.pc.in
tests/: Makefile.am  v0.cc
tests/biblion/: .conf
tests/biblion/Genesis/1/: 2  3  4
